--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="button-54" role="button" onClick="shake()">摇一摇</button>
     </div>
     <div class="row">
-        <img id="ball" alt="Magic 8 Ball" src="src/8ball.png">
+        <img id="ball" alt="Magic 8 Ball" src="8ball.png">
         <div id="food">
 
         </div>
